--- a/projectWarehouse/src/main/resources/templates/buyer_find.html
+++ b/projectWarehouse/src/main/resources/templates/buyer_find.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Edition mode</title>
+  <title>Logging in</title>
   <style>
     body {
       background-color: black;
@@ -68,7 +68,7 @@
 </head>
 <body>
 <div class="main_block">
-  <div><h1>Edit your profile data</h1></div>
+  <div><h1>Logging in</h1></div>
   <form method="post">
     <div class="field"><input type="text" name="providedLogin" id="providedLogin" placeholder="Login"/>&nbsp Login</div>
     <div class="field"><input type="text" name="providedPassword" id="providedPassword" placeholder="Password" />&nbsp Password</div>
