--- a/projectWarehouse/src/main/resources/templates/buyer_main_menu.html
+++ b/projectWarehouse/src/main/resources/templates/buyer_main_menu.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Menu</title>
+  <title>Buyer menu</title>
   <style>
     body {
       background-color: black;
@@ -56,7 +56,7 @@
 </head>
 <body>
 <div class="main_block">
-  <div><h1>---Buyer main menu---</h1></div>
+  <div><h1>---Buyer menu---</h1></div>
   <div><a th:href="@{/buyer_create}" target="_blank"><h1>Register buyer</h1></a></div>
   <div><a th:href="@{/buyer_find}" target="_blank"><h1>Log in</h1></a></div>
   <div><a th:href="@{/show_warehouses}" target="_blank"><h1>Warehouses</h1></a></div>
