--- a/projectWarehouse/src/main/resources/templates/order_delete.html
+++ b/projectWarehouse/src/main/resources/templates/order_delete.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Deleting mode</title>
+    <title>Delete order</title>
     <style>
         body {
             background-color: black;
@@ -66,7 +66,7 @@
 <div class="main_block">
     <div class="menu_item"><a th:href="@{/buyer_main_menu}" target="_blank"><h1>Main menu</h1></a></div>
     <form method="post" th:if="${deleteMessage == null || deleteMessage == false}">
-        <div><h2>Sure you want to delete the order?</h2></div>
+        <div><h2>Want to delete your order?</h2></div>
         <div class="field"><input type="text" name="deleteOrderId" id="deleteOrderId" />&nbsp Order id</div>
         <div class="field"><button type="submit">Confirm</button>&nbsp
             <div th:text="${deleteMessage == false ? 'No data was found!' : ''}"></div>
