--- a/projectWarehouse/src/main/resources/templates/order_edit.html
+++ b/projectWarehouse/src/main/resources/templates/order_edit.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Profile details</title>
+  <title>Order details</title>
   <style>
     body {
       background-color: black;
@@ -72,19 +72,19 @@
 </head>
 <body>
 <div class="main_block">
-  <div><h1>Edit order details</h1></div>
+  <div><h1>Order details</h1></div>
   <form method="post" action="order_edit">
     <div class="field_container" th:if="${editMessage == null}">
-        <div class="field"><input type="text" readonly name="orderId" id="orderId" th:value="${order.orderId} == null ? '' : ${order.orderId}" />&nbsp Order id</div>
-        <div class="field"><input type="text" name="warehouseId" id="warehouseId" th:value="${order.warehouseId} == null ? '' : ${order.warehouseId}" />&nbsp Warehouse id</div>
-        <div class="field"><input type="text" name="buyerId" id="buyerId" th:value="${order.buyerId} == null ? '' : ${order.buyerId}" />&nbsp Buyer id </div>
-        <div class="field"><input type="text" name="totalSum" id="totalSum" th:value="${order.totalSum} == null ? '' : ${order.totalSum}" />&nbsp Total sum</div>
-        <div class="field"><input type="text" name="keepingDays" id="keepingDays" th:value="${order.keepingDays} == null ? '' : ${order.keepingDays}" />&nbsp Keeping days</div>
-        <div class="field"><input type="text" name="collisUnloaded" id="collisUnloaded" th:value="${order.collisUnloaded} == null ? '' : ${order.collisUnloaded}" />&nbsp Collis unloaded</div>
-        <div class="field"><input type="text" name="platesNumberUnloading" id="platesNumberUnloading" th:value="${order.platesNumberUnloading} == null ? '' : ${order.platesNumberUnloading}" />&nbsp Unloading plates</div>
-        <div class="field"><input type="text" name="platesNumberLoading" id="platesNumberLoading" th:value="${order.platesNumberLoading} == null ? '' : ${order.platesNumberLoading}" />&nbsp Loading plates</div>
-        <div class="field"><input type="text" name="status" id="status" th:value="${order.status} == null ? '' : ${order.status}" />&nbsp Status</div>
-        <div class="field"><input type="text" name="comment" id="comment" th:value="${order.comment} == null ? '' : ${order.comment}" />&nbsp Comment</div>
+        <div class="field"><input type="text" readonly name="orderId" id="orderId" th:value="${order.orderId} == null ? '' : ${order.orderId}" required />&nbsp Order id</div>
+        <div class="field"><input type="text" name="warehouseId" id="warehouseId" th:value="${order.warehouseId} == null ? '' : ${order.warehouseId}" required />&nbsp Warehouse id</div>
+        <div class="field"><input type="text" name="buyerId" id="buyerId" th:value="${order.buyerId} == null ? '' : ${order.buyerId}" required />&nbsp Buyer id </div>
+        <div class="field"><input type="text" name="totalSum" id="totalSum" th:value="${order.totalSum} == null ? '' : ${order.totalSum}" required />&nbsp Total sum</div>
+        <div class="field"><input type="text" name="keepingDays" id="keepingDays" th:value="${order.keepingDays} == null ? '' : ${order.keepingDays}" required />&nbsp Keeping days</div>
+        <div class="field"><input type="text" name="collisUnloaded" id="collisUnloaded" th:value="${order.collisUnloaded} == null ? '' : ${order.collisUnloaded}" required />&nbsp Collis unloaded</div>
+        <div class="field"><input type="text" name="platesNumberUnloading" id="platesNumberUnloading" th:value="${order.platesNumberUnloading} == null ? '' : ${order.platesNumberUnloading}" required />&nbsp Unloading plates</div>
+        <div class="field"><input type="text" name="platesNumberLoading" id="platesNumberLoading" th:value="${order.platesNumberLoading} == null ? '' : ${order.platesNumberLoading}" required />&nbsp Loading plates</div>
+        <div class="field"><input type="text" name="status" id="status" th:value="${order.status} == null ? '' : ${order.status}" required />&nbsp Status</div>
+        <div class="field"><input type="text" name="comment" id="comment" th:value="${order.comment} == null ? '' : ${order.comment}" required />&nbsp Comment</div>
         <div class="field"><input class="checkbox" type="checkbox" name="isUnloadingByWH" id="isUnloadingByWH" th:checked="${order.isUnloadingByWH}" />&nbsp Unloading by WH</div>
         <div class="field"><input class="checkbox" type="checkbox" name="isLoadingByWH" id="isLoadingByWH" th:checked="${order.isLoadingByWH}" />&nbsp Loading by WH</div>
         <div class="field"><button type="submit">Confirm</button></div>
