--- a/projectWarehouse/src/main/resources/templates/order_find.html
+++ b/projectWarehouse/src/main/resources/templates/order_find.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Profile details</title>
+  <title>Order details</title>
   <style>
     body {
       background-color: black;
@@ -68,7 +68,7 @@
 </head>
 <body>
 <div class="main_block">
-  <div><h1>Edit order details</h1></div>
+  <div><h1>Order details</h1></div>
   <form method="post">
     <div class="field"><input type="text" name="searchOrderId" id="searchOrderId" placeholder="Order id" th:value="${param.orderId}" />&nbsp Order id</div>
     <div class="field"><button type="submit">Confirm</button></div>
