--- a/projectWarehouse/src/main/resources/templates/warehouse_details.html
+++ b/projectWarehouse/src/main/resources/templates/warehouse_details.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Warehouse details</title>
+    <title>Account details</title>
     <style>
         body {
             background-color: black;
