--- a/projectWarehouse/src/main/resources/templates/buyer_delete.html
+++ b/projectWarehouse/src/main/resources/templates/buyer_delete.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Deleting mode</title>
+  <title>Delete account</title>
   <style>
     body {
       background-color: black;
@@ -68,7 +68,7 @@
 <div class="main_block">
   <div class="menu_item"><a th:href="@{/buyer_main_menu}" target="_blank"><h1>Main menu</h1></a></div>
   <form method="post" th:if="${deleteMessage != true}">
-    <div><h2>Sure you want to delete the account?</h2></div>
+    <div><h2>Want to delete your account?</h2></div>
     <div class="field"><input type="text" name="login" id="login" placeholder="Login" />&nbsp Login</div>
     <div class="field"><input type="text" name="password" id="password" placeholder="Password" />&nbsp Password</div>
     <div class="field"><input type="text" name="fieldRegistrationNumber" id="fieldRegistrationNumber" placeholder="Registration number" th:value="${param.registrationNumber}" />&nbsp Registration number</div>
