--- a/projectWarehouse/src/main/resources/templates/buyer_edit.html
+++ b/projectWarehouse/src/main/resources/templates/buyer_edit.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Edition mode</title>
+    <title>Account details</title>
     <style>
         body {
             background-color: black;
@@ -68,19 +68,19 @@
 </head>
 <body>
 <div class="main_block">
-    <div><h1>Edit your profile data</h1></div>
+    <div><h1>Account details</h1></div>
     <form method="post" th:if="${buyer != null}">
         <div class="field_container">
-            <div class="field"><input type="text" name="login" id="login" th:value="${buyer.login} == null ? '' : ${buyer.login}" />&nbsp Login</div>
-            <div class="field"><input type="text" name="password" id="password" th:value="${buyer.password} == null ? '' : ${buyer.password}" />&nbsp Password</div>
-            <div class="field"><input type="text" name="passwordCheck" id="passwordCheck" th:value="${buyer.password} == null ? '' : ${buyer.password}" />&nbsp Password confirmation </div>
-            <div class="field"><input type="text" name="entityTitle" id="entityTitle" th:value="${buyer.entityTitle} == null ? '' : ${buyer.entityTitle}" />&nbsp Entity title</div>
-            <div class="field"><input type="text" name="registrationNumber" id="registrationNumber" th:value="${buyer.registrationNumber} == null ? '' : ${buyer.registrationNumber}" />&nbsp Registration number</div>
-            <div class="field"><input type="text" name="legalAddress" id="legalAddress" th:value="${buyer.legalAddress} == null ? '' : ${buyer.legalAddress}" />&nbsp Legal &nbsp address </div>
-            <div class="field"><input type="text" name="realAddress" id="realAddress" th:value="${buyer.realAddress} == null ? '' : ${buyer.realAddress}" />&nbsp Real &nbsp address </div>
-            <div class="field"><input type="text" name="phoneNumber" id="phoneNumber" th:value="${buyer.phoneNumber} == null ? '' : ${buyer.phoneNumber}" />&nbsp Phone &nbsp number </div>
-            <div class="field"><input type="text" name="emailAddress" id="emailAddress" th:value="${buyer.emailAddress} == null ? '' : ${buyer.emailAddress}" />&nbsp E-mail address </div>
-            <div class="field"><input type="text" name="buyerId" id="buyerId" th:value="${buyer.buyerId}" readonly />&nbsp Buyer Id </div>
+            <div class="field"><input type="text" name="login" id="login" th:value="${buyer.login} == null ? '' : ${buyer.login}" required />&nbsp Login</div>
+            <div class="field"><input type="text" name="password" id="password" th:value="${buyer.password} == null ? '' : ${buyer.password}" required />&nbsp Password</div>
+            <div class="field"><input type="text" name="passwordCheck" id="passwordCheck" th:value="${buyer.password} == null ? '' : ${buyer.password}" required />&nbsp Password confirmation </div>
+            <div class="field"><input type="text" name="entityTitle" id="entityTitle" th:value="${buyer.entityTitle} == null ? '' : ${buyer.entityTitle}" required />&nbsp Entity title</div>
+            <div class="field"><input type="text" name="registrationNumber" id="registrationNumber" th:value="${buyer.registrationNumber} == null ? '' : ${buyer.registrationNumber}" required />&nbsp Registration number</div>
+            <div class="field"><input type="text" name="legalAddress" id="legalAddress" th:value="${buyer.legalAddress} == null ? '' : ${buyer.legalAddress}" required />&nbsp Legal &nbsp address </div>
+            <div class="field"><input type="text" name="realAddress" id="realAddress" th:value="${buyer.realAddress} == null ? '' : ${buyer.realAddress}" required />&nbsp Real &nbsp address </div>
+            <div class="field"><input type="text" name="phoneNumber" id="phoneNumber" th:value="${buyer.phoneNumber} == null ? '' : ${buyer.phoneNumber}" required />&nbsp Phone &nbsp number </div>
+            <div class="field"><input type="text" name="emailAddress" id="emailAddress" th:value="${buyer.emailAddress} == null ? '' : ${buyer.emailAddress}" required />&nbsp E-mail address </div>
+            <div class="field"><input type="text" name="buyerId" id="buyerId" th:value="${buyer.buyerId}" readonly required />&nbsp Buyer Id </div>
             <div class="field"><button type="submit">Confirm</button></div>
             <div th:if="${editMessage == true}" class="field">Data has been changed!</div>
             <div class="field"><a th:href="@{/order_create(buyerId=${buyer.buyerId})}" target="_blank">Create order</a></div>
