--- a/projectWarehouse/src/main/resources/templates/warehouse_create.html
+++ b/projectWarehouse/src/main/resources/templates/warehouse_create.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Registration</title>
+    <title>Account registration</title>
     <style>
         body {
             background-color: black;
@@ -72,20 +72,20 @@
 </head>
 <body>
 <div class="main_block">
-    <div><h1>WH creation</h1></div>
+    <div><h1>Warehouse registration</h1></div>
     <form method="post">
         <div class="field_container">
-            <div class="field"><input type="text" name="entityTitle" id="entityTitle" placeholder="Entity title" />&nbsp Entity title</div>
-            <div class="field"><input type="text" name="registrationNumber" id="registrationNumber" placeholder="Registration number" />&nbsp Registration number</div>
-            <div class="field"><input type="text" name="legalAddress" id="legalAddress" placeholder="Legal address" />&nbsp Legal address</div>
-            <div class="field"><input type="text" name="realAddress" id="realAddress" placeholder="Real address" />&nbsp Real address</div>
-            <div class="field"><input type="text" name="GpsCoordinates" id="GpsCoordinates" placeholder="GPS coordinates" />&nbsp GPS coordinates</div>
-            <div class="field"><input type="text" name="phoneNumber" id="phoneNumber" placeholder="Phone number" />&nbsp Phone number</div>
-            <div class="field"><input type="text" name="emailAddress" id="emailAddress" placeholder="E-mail address" />&nbsp E-mail address</div>
-            <div class="field"><input type="text" name="spaceFree" id="spaceFree" placeholder="Space free" />&nbsp Space free</div>
-            <div class="field"><input type="text" name="login" id="login" placeholder="Login" />&nbsp Login</div>
-            <div class="field"><input type="text" name="password" id="password" placeholder="Password" />&nbsp Password</div>
-            <div class="field"><input type="text" name="passwordCheck" id="passwordCheck" placeholder="Repeat password" />&nbsp Repeat password</div>
+            <div class="field"><input type="text" name="entityTitle" id="entityTitle" placeholder="Entity title" required />&nbsp Entity title</div>
+            <div class="field"><input type="text" name="registrationNumber" id="registrationNumber" placeholder="Registration number" required />&nbsp Registration number</div>
+            <div class="field"><input type="text" name="legalAddress" id="legalAddress" placeholder="Legal address" required />&nbsp Legal address</div>
+            <div class="field"><input type="text" name="realAddress" id="realAddress" placeholder="Real address" required />&nbsp Real address</div>
+            <div class="field"><input type="text" name="GpsCoordinates" id="GpsCoordinates" placeholder="GPS coordinates" required />&nbsp GPS coordinates</div>
+            <div class="field"><input type="text" name="phoneNumber" id="phoneNumber" placeholder="Phone number" required />&nbsp Phone number</div>
+            <div class="field"><input type="text" name="emailAddress" id="emailAddress" placeholder="E-mail address" required />&nbsp E-mail address</div>
+            <div class="field"><input type="text" name="spaceFree" id="spaceFree" placeholder="Space free" required />&nbsp Space free</div>
+            <div class="field"><input type="text" name="login" id="login" placeholder="Login" required />&nbsp Login</div>
+            <div class="field"><input type="text" name="password" id="password" placeholder="Password" required />&nbsp Password</div>
+            <div class="field"><input type="text" name="passwordCheck" id="passwordCheck" placeholder="Repeat password" required />&nbsp Repeat password</div>
             <div class="field"><input class="checkbox" type="checkbox" name="isTemperatureWH" id="isTemperatureWH" />&nbsp Temperature WH</div>
             <div class="field"><input class="checkbox" type="checkbox" name="isCustomWH" id="isCustomWH" />&nbsp Customs WH</div>
             <div class="field"><button type="submit" onclick="createWarehouse()">Confirm</button></div>
