--- a/projectWarehouse/src/main/resources/templates/warehouse_delete.html
+++ b/projectWarehouse/src/main/resources/templates/warehouse_delete.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Deleting mode</title>
+    <title>Delete account</title>
     <style>
         body {
             background-color: black;
@@ -68,7 +68,7 @@
 <div class="main_block">
     <div class="menu_item"><a th:href="@{/warehouse_main_menu}" target="_blank"><h1>Main menu</h1></a></div>
     <form method="get" th:if="${deleteMessage == null}">
-        <div><h2>Sure you want to delete the account?</h2></div>
+        <div><h2>Want to delete your account?</h2></div>
         <div class="field"><input type="text" name="login" id="login" placeholder="Login" />&nbsp Login</div>
         <div class="field"><input type="text" name="password" id="password" placeholder="Password" />&nbsp Password</div>
         <div class="field"><input type="text" name="registrationNumber" id="registrationNumber" placeholder="Registration number" th:value="${param.registrationNumber}" />&nbsp Registration number</div>
