--- a/projectWarehouse/src/main/resources/templates/warehouse_find.html
+++ b/projectWarehouse/src/main/resources/templates/warehouse_find.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Profile details</title>
+  <title>Logging in</title>
   <style>
     body {
       background-color: black;
@@ -72,7 +72,7 @@
 </head>
 <body>
 <div class="main_block">
-  <div><h1>Edit WH details</h1></div>
+  <div><h1>Logging in</h1></div>
   <form method="post" th:if="${warehouse == null}">
     <div class="field"><input type="text" name="registrationNumber" id="registrationNumber" placeholder="Registration number"/>&nbsp Registration number</div>
     <div class="field"><input type="text" name="login" id="login" placeholder="Login"/>&nbsp Login</div>
