--- a/projectWarehouse/src/main/resources/templates/warehouse_main_menu.html
+++ b/projectWarehouse/src/main/resources/templates/warehouse_main_menu.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Menu</title>
+    <title>Warehouse menu</title>
     <style>
         body {
             background-color: black;
@@ -56,7 +56,7 @@
 </head>
 <body>
 <div class="main_block">
-    <div><h1>---WH main menu---</h1></div>
+    <div><h1>---Warehouse main menu---</h1></div>
     <div><a th:href="@{/warehouse_create}" target="_blank"><h1>Register warehouse</h1></a></div>
     <div><a th:href="@{/warehouse_find}" target="_blank"><h1>Log in</h1></a></div>
     <div><a href="/about_project" target="_blank"><h1>About project</h1></a></div>
